@@ -1,0 +1,3 @@
+# Changelog
+
+* Add GetProcessMemoryInfo: [#2](https://github.com/elastic/go-windows/pull/2)
