@@ -29,6 +29,8 @@ https://github.com/elastic/beats/compare/v6.4.0...6.x[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fixed `add_host_metadata` not initializing correctly on Windows. {issue}7715[7715]
+
 *Auditbeat*
 
 *Filebeat*
